# concurrent_lab_3_4

./: .gitignore  CMakeLists.txt  ReadMe.txt  openMP_parallel_multiplication.cpp  sequential_multiplication.cpp  simd_matrix_multiplication.cpp  support_functions.h  transpose.cpp
